--- a/nssurge.conf
+++ b/nssurge.conf
@@ -1,75 +1,76 @@
 [General]
-# 自用Surge配置，2023.10.31更新
-# > HTTP-API
+# 更新同步
+# 测试
+# HTTP-API
 http-api = Jivei@0.0.0.0:6170
-# > 日志等级
+# 日志等级
 loglevel = notify
-# > 跳过代理
+# 跳过代理
 skip-proxy = 239.255.255.250/32, 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, localhost, *.local, *.crashlytics.com
-# > VIF Excluded Routes
+# VIF Excluded Routes
 # tun-excluded-routes = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12 , 239.255.255.250/32
-# > VIF Included Routes
+# VIF Included Routes
 # tun-included-routes = 192.168.1.12/32
-# > Always Real IP Hosts
+# Always Real IP Hosts
 always-real-ip = *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com
 # Hijack DNS
 # hijack-dns = 8.8.8.8:53, 8.8.4.4:53
-# > 允许 Wi-Fi 访问macOS
+# 允许 Wi-Fi 访问macOS
 http-listen = 0.0.0.0
 socks5-listen = 0.0.0.0
-# > 允许 Wi-Fi 访问iOS
+# 允许 Wi-Fi 访问iOS
 allow-wifi-access = false
 wifi-access-http-port = 6152
 wifi-access-socks5-port = 6153
-# > Internet 测试 URL
+# Internet 测试 URL
 internet-test-url = http://www.aliyun.com
-# > 代理测速 URL
+# 代理测速 URL
 proxy-test-url = http://1.1.1.1
-# > 测试超时（秒）
+# 测试超时（秒）
 test-timeout = 5
-# > 排除简单主机名
+# 排除简单主机名
 exclude-simple-hostnames = true
 # IPv6与隐藏VPN图标冲突，选择一项开启
 # 有看ipv6直播需求和需要适配MacOS所以模式开启ipv6关闭隐藏VPN图标
-# > IPv6 支持
+# IPv6 支持
 ipv6 = true
-# > 隐藏 VPN 图标
+# 隐藏 VPN 图标
 hide-vpn-icon = false
-# > 当遇到 REJECT 策略时返回错误页
+# 当遇到 REJECT 策略时返回错误页
 show-error-page-for-reject = true
-# > Wi-Fi 不是主接口则使用SSID组的默认策略
+# Wi-Fi 不是主接口则使用SSID组的默认策略
 use-default-policy-if-wifi-not-primary = false
-# > 增强版 Wi-Fi 助理
+# 增强版 Wi-Fi 助理
 wifi-assist = false
-# > DNS 服务器
-dns-server = 223.5.5.5, 114.114.114.114, 119.29.29.29
+# DNS 服务器
+dns-server = 223.5.5.5, 119.29.29.29
 encrypted-dns-server = https://dns.alidns.com/dns-query
-# > etc/hosts 读取 DNS 记录
+# etc/hosts 读取 DNS 记录
 read-etc-hosts = true
-# > 路由防火墙
+# 路由防火墙
 # 包含所有的网络请求
 include-all-networks = false
 # 包含本地网络请求
 include-local-networks = false
-# > 自定义 GeoIP 数据库
+# 自定义 GeoIP 数据库
 geoip-maxmind-url = https://cdn.jsdelivr.net/gh/Hackl0us/GeoIP2-CN@release/Country.mmdb
-# > GeoIP 禁用自动更新
+# GeoIP 禁用自动更新
 disable-geoip-db-auto-update = false
-# > UDP IP 防泄漏
+# UDP IP 防泄漏
 udp-policy-not-supported-behaviour = REJECT
-# > HTTP-API-TLS
+# HTTP-API-TLS
 http-api-tls = true
-# > Web 控制器
+# Web 控制器
 http-api-web-dashboard = true
-# > All Hybrid 网络并发
+# All Hybrid 网络并发
 # all-hybrid = false
-# > 允许个人热点使用代理
+# 允许个人热点使用代理
 allow-hotspot-access = false
-# > 代理请求本地DNS映射
+# 代理请求本地DNS映射
 use-local-host-item-for-proxy = true
-# > 提高处理 UDP 流量优先级
+# 提高处理 UDP 流量优先级
 udp-priority = true
-# > 网络优化
+# 网络优化
 ipv6-vif = always
 all-hybrid = true
 # 加密DNS服务器
@@ -77,6 +78,9 @@ all-hybrid = true
 encrypted-dns-follow-outbound-mode = true
 
 [Proxy Group]
+# SSID = subnet, default = PROXY, "TYPE:CELLULAR" = PROXY, "WIFI名称" = PROXY
+# default表示默认，TYPE:CELLULAR表示蜂窝数据
+# SSID 适用于想自定义使用场景，比如蜂窝自动直连 Wi-Fi 代理，蜂窝自动代理 Wi-Fi 直连等
 # --------- 订阅 ---------
 # 机场订阅策略组
 # 机场订阅应当自策略组形式出现使用其他策略组引用而不是单独的配置文件
@@ -84,62 +88,68 @@ encrypted-dns-follow-outbound-mode = true
 # 自定义机场策略组名称1 = select, policy-path=你的机场订阅地址node list替换到这里, include-all-proxies=1, no-alert=0, hidden=0
 # 自定义机场策略组名称2 = select, policy-path=你的机场订阅地址node list替换到这里, include-all-proxies=1, no-alert=0, hidden=0
 # 策略组（下面的节点信息需与外部节点对应，若删除了外部节点里的节点，那么在策略组里也要删除。）
-机场1 = select, policy-path=删除汉字替换你的订阅链接, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0
-
-# 没有多个机场的请删除下面两条
-机场2 = select, policy-path=删除汉字替换你的订阅链接, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0
-机场3 = select, policy-path=删除汉字替换你的订阅链接, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0
-
-Bing = select, DIRECT, 香港节点, 美国节点, 日本节点, 台湾节点, 新加坡节点, no-alert=0, hidden=0, include-all-proxies=0
-Emby = select, DIRECT, 香港节点, 美国节点, 日本节点, 台湾节点, 新加坡节点, no-alert=0, hidden=0, include-all-proxies=0
-PROXY = select, 香港节点, 美国节点, 日本节点, 台湾节点, 新加坡节点, no-alert=0, hidden=0, include-all-proxies=0
-TikTok = select, 香港节点, 美国节点, 日本节点, 台湾节点, 新加坡节点, no-alert=0, hidden=0, include-all-proxies=0
-
-香港节点 = select, include-all-proxies=1, include-other-group=机场1, policy-regex-filter=^(?=.*((?i)🇭🇰|香港|港|(\b(HK|Hong)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$, no-alert=0, hidden=0
-台湾节点 = select, include-all-proxies=1, include-other-group=机场1, policy-regex-filter=^(?=.*((?i)🇹🇼|台湾|中华民国|(\b(TW|Tai|民国|Taiwan)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$
-新加坡节点 = select, include-all-proxies=1, include-other-group=机场1, policy-regex-filter=^(?=.*((?i)🇸🇬|新加坡|李氏|狮|(\b(SG|Singapore)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$
-美国节点 = select, include-all-proxies=1, include-other-group=机场1, policy-regex-filter=^(?=.*((?i)🇺🇸|美国|漂亮|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|(\b(US|United States)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$, no-alert=0, hidden=0
-日本节点 = select, include-all-proxies=1, include-other-group=机场1, policy-regex-filter=^(?=.*((?i)🇯🇵|日本|川日|东京|大阪|泉日|埼玉|(\b(JP|Japan)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$
+# 机场
+机场名称随意改  = select, policy-path=替换机场订阅地址, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
+机场2名称随意改 = select, policy-path=替换机场订阅地址, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
+# 分流策略
+# NewBing
+Bing = select, DIRECT, U.S.A, include-all-proxies=1
+# 国内媒体家宽改ip
+China = select, DIRECT, no-alert=0, hidden=0, include-all-proxies=1, include-other-group="Flower, Bocchi, V2board, Totwo", policy-regex-filter=^(?=.*((?i)住宅|家宽| ○|家))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$
+# Emby 媒体
+Emby = select, DIRECT, PROXY, no-alert=0, hidden=0, include-all-proxies=1
+# 代理
+PROXY = select, HongKong, U.S.A, Japan, Taiwan, Singapore, no-alert=0, hidden=0, include-all-proxies=1
+# Tiktok
+TikTok = select, Japan, U.S.A, HongKong, Taiwan, Singapore, no-alert=0, hidden=0, include-all-proxies=1
+# 推特乌克兰无广告
+Twitter = select, PROXY, Ukraine, no-alert=0, hidden=0, include-all-proxies=0
+# 油管俄罗斯无广告
+Youtube = select, PROXY, Russia, no-alert=0, hidden=0, include-all-proxies=0
+# 节点筛选
+# 香港
+HongKong = select, include-all-proxies=1, include-other-group="机场名称随意改", policy-regex-filter=^(?=.*((?i)🇭🇰|香港|港|(\b(HK|Hong)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$
+# 台湾
+Taiwan = select, include-all-proxies=1, include-other-group="机场名称随意改", policy-regex-filter=^(?=.*((?i)🇹🇼|台湾|台|(\b(TW|Tai|Taiwan)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$, no-alert=0, hidden=0
+# 新加坡
+Singapore = select, include-all-proxies=1, include-other-group="机场名称随意改", policy-regex-filter=^(?=.*((?i)🇸🇬|新加坡|狮|(\b(SG|Singapore)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$, no-alert=0, hidden=0
+# 美国
+U.S.A = select, include-all-proxies=1, include-other-group="机场名称随意改", policy-regex-filter=^(?=.*((?i)🇺🇸|美国|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|(\b(US|United States)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$, no-alert=0, hidden=0
+# 乌克兰
+Ukraine = select, include-all-proxies=1, include-other-group="机场名称随意改", policy-regex-filter=^(?=.*((?i)🇺🇦|乌克兰|乌(\b(Ukraine)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$, no-alert=0, hidden=0
+# 日本
+Japan = select, include-all-proxies=1, include-other-group="机场名称随意改", policy-regex-filter=^(?=.*((?i)🇯🇵|日本|川日|东京|大阪|泉日|埼玉|(\b(JP|Japan)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$, no-alert=0, hidden=0
+# 俄罗斯
+Russia = select, include-all-proxies=1, include-other-group="机场名称随意改", policy-regex-filter=^(?=.*((?i)🇷🇺|俄罗斯|俄(\b(Russia)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$, no-alert=0, hidden=0
 
 [Rule]
-# 规则修正
-RULE-SET,https://raw.githubusercontent.com/jivei/Surge/main/Emby.list,Emby // Emby直连
-RULE-SET,https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Special.list,DIRECT // 国内直连规则修正
-# 广告拦截
-RULE-SET,https://raw.githubusercontent.com/jivei/Surge/main/Adguard.list,REJECT
+# SUBNET,SSID:WIfi名称,DIRECT // 简单粗暴的WIFI直连规则
+PROCESS-NAME,Telegram,PROXY // MacOS专属，iOS自动忽略，进程规则，规则会匹配这个进程名的程序，支持 * 和 ? 两种通配符。
+RULE-SET,https://raw.githubusercontent.com/jivei/Surge/main/Emby.list,Emby,update-interval=86400 // Emby规则修正
+RULE-SET,https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Special.list,DIRECT,update-interval=86400 // 国内直连规则修正
+RULE-SET,https://raw.githubusercontent.com/jivei/Surge/main/Adguard.list,REJECT,update-interval=86400 // 分流广告拦截合集
 DOMAIN-SET,https://anti-ad.net/surge2.txt,REJECT // 分流广告拦截合集
-RULE-SET,https://limbopro.com/Adblock4limbo_surge.list,REJECT
-# 隐私保护
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Privacy/Privacy.list,REJECT
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Privacy/Privacy_Domain.list,REJECT
-# 运营商劫持
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Hijacking/Hijacking.list,REJECT
-# 微信
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/WeChat/WeChat.list,DIRECT // 可能会减少微信转圈
-# Bing
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Bing/Bing.list,Bing
-# TestFlight
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/TestFlight/TestFlight.list,PROXY
-# 苹果服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple.list,DIRECT
-# Speedtest
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Speedtest/Speedtest.list,PROXY
-# ChatGPT
-RULE-SET,https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/OpenAI.list,美国节点
-# Onedrive
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/OneDrive/OneDrive.list,DIRECT
-# 微软
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list,DIRECT
-# 游戏平台
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Epic/Epic.list,PROXY
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Sony/Sony.list,PROXY
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Steam/Steam.list,PROXY
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Nintendo/Nintendo.list,PROXY
-# 全球加速
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global.list,PROXY
-# ASN China
-RULE-SET,https://gitlab.com/lodepuly/asn-china/-/raw/main/ASN.China.list,DIRECT
-# 兜底规则
+RULE-SET,https://limbopro.com/Adblock4limbo_surge.list,REJECT,update-interval=86400 // 分流网页广告拦截合集
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Privacy/Privacy.list,REJECT,update-interval=86400 // 隐私保护
+DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Privacy/Privacy_Domain.list,REJECT // 隐私保护
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Hijacking/Hijacking.list,REJECT,update-interval=86400 // 运营商劫持
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/DouYin/DouYin.list,China,update-interval=86400 // 抖音
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/XiaoHongShu/XiaoHongShu.list,China,update-interval=86400 // 小红书
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/WeChat/WeChat.list,DIRECT,update-interval=86400 // 微信
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Bing/Bing.list,Bing,update-interval=86400 //NewBing
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/TestFlight/TestFlight.list,PROXY,update-interval=86400 // TF
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple.list,DIRECT,update-interval=86400 // 苹果
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Speedtest/Speedtest.list,PROXY,update-interval=86400 // 测速
+RULE-SET,https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/OpenAI.list,U.S.A,update-interval=86400 // ChatGPT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Twitter/Twitter.list,Twitter,update-interval=86400 // 乌克兰节点无广告
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/YouTube/YouTube.list,Youtube,update-interval=86400 // 俄罗斯节点无广告
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list,DIRECT,update-interval=86400 // 微软
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Epic/Epic.list,PROXY,update-interval=86400 // Epic
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Sony/Sony.list,PROXY,update-interval=86400 // Sony
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Steam/Steam.list,PROXY,update-interval=86400 // Steam
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Nintendo/Nintendo.list,PROXY,update-interval=86400 // Nintendo
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global.list,PROXY,update-interval=86400 // 全球加速
+RULE-SET,https://gitlab.com/lodepuly/asn-china/-/raw/main/ASN.China.list,DIRECT,update-interval=86400 // ASN China
 FINAL,PROXY,dns-failed
 
 [Host]
