更新 nssurge.conf

--- a/nssurge.conf
+++ b/nssurge.conf
@@ -1,6 +1,4 @@
 [General]
-# 更新同步
-# 测试
 # HTTP-API
 http-api = Jivei@0.0.0.0:6170
 # 日志等级
@@ -95,7 +93,7 @@ encrypted-dns-follow-outbound-mode = true
 # NewBing
 Bing = select, DIRECT, U.S.A, include-all-proxies=1
 # 国内媒体家宽改ip
-China = select, DIRECT, no-alert=0, hidden=0, include-all-proxies=1, include-other-group="Flower, Bocchi, V2board, Totwo", policy-regex-filter=^(?=.*((?i)住宅|家宽| ○|家))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$
+China = select, DIRECT, no-alert=0, hidden=0, include-all-proxies=1, include-other-group="机场名称随意改", policy-regex-filter=^(?=.*((?i)住宅|家宽| ○|家))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$
 # Emby 媒体
 Emby = select, DIRECT, PROXY, no-alert=0, hidden=0, include-all-proxies=1
 # 代理
