--- a/1.conf
+++ b/1.conf
@@ -1,5 +1,8 @@
-[Script]
-cron "30 10 * * *" script-path=https://raw.githubusercontent.com/jivei/Surge/main/js/dlm.js,timeout=300, tag=达乐美披萨
-http-request ^https:\/\/game\.dominos\.com\.cn\/gold\/game\/gameDone script-path=https://raw.githubusercontent.com/jivei/Surge/main/js/dlm.js,requires-body=true, timeout=10, tag=达乐美披萨获取token
-[MITM]
-hostname =game.dominos.com.cn
+[URL Rewrite]
+^https:\/\/acs\.m\.taobao\.com\/gw\/mtop\.taobao\.mp\.ucp\.forward\.gateway data="https://raw.githubusercontent.com/mieqq/mieqq/master/reject-dict.json"
+
+^https:\/\/acs\.m\.taobao\.com\/gw\/mtop\.mbox\.fc\.common\.gateway data="https://raw.githubusercontent.com/mieqq/mieqq/master/reject-dict.json"
+
+^https:\/\/acs\.m\.taobao\.com\/gw\/mtop\.mbox\.fc\.common\.gateway data="https://raw.githubusercontent.com/mieqq/mieqq/master/reject-dict.json"
+
+^https:\/\/acs\.m\.taobao\.com\/gw\/mtop\.com\.taobao\.wireless\.amp\.newsync data="https://raw.githubusercontent.com/mieqq/mieqq/master/reject-dict.json"
