--- a/1.conf
+++ b/1.conf
@@ -1,8 +1,4 @@
 [URL Rewrite]
-^https:\/\/acs\.m\.taobao\.com\/gw\/mtop\.taobao\.mp\.ucp\.forward\.gateway data="https://raw.githubusercontent.com/mieqq/mieqq/master/reject-dict.json"
+^https:\/\/kde\.qq\.com\/getAds url reject-dict
 
-^https:\/\/acs\.m\.taobao\.com\/gw\/mtop\.mbox\.fc\.common\.gateway data="https://raw.githubusercontent.com/mieqq/mieqq/master/reject-dict.json"
-
-^https:\/\/acs\.m\.taobao\.com\/gw\/mtop\.mbox\.fc\.common\.gateway data="https://raw.githubusercontent.com/mieqq/mieqq/master/reject-dict.json"
-
-^https:\/\/acs\.m\.taobao\.com\/gw\/mtop\.com\.taobao\.wireless\.amp\.newsync data="https://raw.githubusercontent.com/mieqq/mieqq/master/reject-dict.json"
+hostname = kde.qq.com
