更新 nssurge.conf

--- a/nssurge.conf
+++ b/nssurge.conf
@@ -76,8 +76,8 @@ all-hybrid = true
 encrypted-dns-follow-outbound-mode = true
 
 [Proxy Group]
-# SSID = subnet, default = PROXY, "TYPE:CELLULAR" = PROXY, "WIFI名称" = PROXY
-# default表示默认，TYPE:CELLULAR表示蜂窝数据
+# SSID = subnet, default = PROXY, "TYPE:CELLULAR" = PROXY, "WIFI名称" = PROXY , "ROUTER:192.168.1.1"= PROXY
+# default表示默认，TYPE:CELLULAR表示蜂窝数据，ROUTER表示路由器地址比WIFI名称更加准确
 # SSID 适用于想自定义使用场景，比如蜂窝自动直连 Wi-Fi 代理，蜂窝自动代理 Wi-Fi 直连等
 # --------- 订阅 ---------
 # 机场订阅策略组
