更新 nssurge.conf

--- a/nssurge.conf
+++ b/nssurge.conf
@@ -28,9 +28,9 @@ exclude-simple-hostnames = true
 # IPv6与隐藏VPN图标冲突，选择一项开启
 # 有看ipv6直播需求和需要适配MacOS所以模式开启ipv6关闭隐藏VPN图标
 # IPv6 支持
-ipv6 = true
+ipv6 = flase
 # 隐藏 VPN 图标
-hide-vpn-icon = false
+hide-vpn-icon = true
 # 当遇到 REJECT 策略时返回错误页
 show-error-page-for-reject = true
 # Wi-Fi 不是主接口则使用SSID组的默认策略
