更新 nssurge.conf

--- a/nssurge.conf
+++ b/nssurge.conf
@@ -98,7 +98,7 @@ PROXY = select, HongKong, U.S.A, Japan, Taiwan, Singapore, no-alert=0, hidden=0,
 # Tiktok
 TikTok = select, Japan, U.S.A, HongKong, Taiwan, Singapore, no-alert=0, hidden=0, include-all-proxies=1
 # ChatGPT
-TikTok = select, Japan, U.S.A, HongKong, Taiwan, Singapore, no-alert=0, hidden=0, include-all-proxies=1
+ChatGPT = select, Japan, U.S.A, HongKong, Taiwan, Singapore, no-alert=0, hidden=0, include-all-proxies=1
 # 推特乌克兰无广告
 Twitter = select, PROXY, Ukraine, no-alert=0, hidden=0, include-all-proxies=0
 # 油管俄罗斯无广告
