--- a/nssurge.conf
+++ b/nssurge.conf
@@ -73,9 +73,6 @@ all-hybrid = true
 encrypted-dns-follow-outbound-mode = true
 
 [Proxy Group]
-# SSID = subnet, default = PROXY, "TYPE:CELLULAR" = PROXY, "WIFI名称" = PROXY , "ROUTER:192.168.1.1"= PROXY
-# default表示默认，TYPE:CELLULAR表示蜂窝数据，ROUTER表示路由器地址比WIFI名称更加准确
-# SSID 适用于想自定义使用场景，比如蜂窝自动直连 Wi-Fi 代理，蜂窝自动代理 Wi-Fi 直连等
 # --------- 订阅 ---------
 # 机场订阅策略组
 # 机场订阅应当自策略组形式出现使用其他策略组引用而不是单独的配置文件
@@ -88,21 +85,13 @@ encrypted-dns-follow-outbound-mode = true
 机场2名称随意改 = select, policy-path=替换机场订阅地址, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
 # 分流策略
 # NewBing
-Bing = select, DIRECT, U.S.A, include-all-proxies=1
-# 国内媒体家宽改ip
-China = select, DIRECT, no-alert=0, hidden=0, include-all-proxies=1, include-other-group="机场名称随意改", policy-regex-filter=^(?=.*((?i)住宅|家宽| ○|家))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$
-# Emby 媒体
-Emby = select, DIRECT, PROXY, no-alert=0, hidden=0, include-all-proxies=1
+Bing = select, DIRECT, HongKong, U.S.A, Japan, Taiwan, Singapore, include-all-proxies=1
 # 代理
 PROXY = select, HongKong, U.S.A, Japan, Taiwan, Singapore, no-alert=0, hidden=0, include-all-proxies=1
 # Tiktok
-TikTok = select, Japan, U.S.A, HongKong, Taiwan, Singapore, no-alert=0, hidden=0, include-all-proxies=1
+TikTok = select, HongKong, U.S.A, Japan, Taiwan, Singapore, no-alert=0, hidden=0, include-all-proxies=1
 # ChatGPT
-ChatGPT = select, Japan, U.S.A, HongKong, Taiwan, Singapore, no-alert=0, hidden=0, include-all-proxies=1
-# 推特乌克兰无广告
-Twitter = select, PROXY, Ukraine, no-alert=0, hidden=0, include-all-proxies=0
-# 油管俄罗斯无广告
-Youtube = select, PROXY, Russia, no-alert=0, hidden=0, include-all-proxies=0
+ChatGPT = select, HongKong, U.S.A, Japan, Taiwan, Singapore, no-alert=0, hidden=0, include-all-proxies=1
 # 节点筛选
 # 香港
 HongKong = select, include-all-proxies=1, include-other-group="机场名称随意改", policy-regex-filter=^(?=.*((?i)🇭🇰|香港|港|(\b(HK|Hong)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$
@@ -128,23 +117,23 @@ RULE-SET,https://limbopro.com/Adblock4limbo_surge.list,REJECT,update-interval=86
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Privacy/Privacy.list,REJECT,update-interval=86400 // 隐私保护
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Privacy/Privacy_Domain.list,REJECT,update-interval=86400 // 隐私保护
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Hijacking/Hijacking.list,REJECT,update-interval=86400 // 运营商劫持
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/DouYin/DouYin.list,China,update-interval=86400 // 抖音
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/XiaoHongShu/XiaoHongShu.list,China,update-interval=86400 // 小红书
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/DouYin/DouYin.list,DIRECT,update-interval=86400 // 抖音
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/XiaoHongShu/XiaoHongShu.list,DIRECT,update-interval=86400 // 小红书
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/WeChat/WeChat.list,DIRECT,update-interval=86400 // 微信
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Bing/Bing.list,Bing,update-interval=86400 //NewBing
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/TestFlight/TestFlight.list,PROXY,update-interval=86400 // TF
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple.list,DIRECT,update-interval=86400 // 苹果
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Speedtest/Speedtest.list,PROXY,update-interval=86400 // 测速
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/OpenAI/OpenAI.list,ChatGPT,update-interval=86400 // ChatGPT
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Twitter/Twitter.list,Twitter,update-interval=86400 // 乌克兰节点无广告
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/YouTube/YouTube.list,Youtube,update-interval=86400 // 俄罗斯节点无广告
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Twitter/Twitter.list,PROXY,update-interval=86400 // 乌克兰节点无广告
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/YouTube/YouTube.list,PROXY,update-interval=86400 // 俄罗斯节点无广告
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list,DIRECT,update-interval=86400 // 微软
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Epic/Epic.list,PROXY,update-interval=86400 // Epic
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Sony/Sony.list,PROXY,update-interval=86400 // Sony
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Steam/Steam.list,PROXY,update-interval=86400 // Steam
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Nintendo/Nintendo.list,PROXY,update-interval=86400 // Nintendo
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global.list,PROXY,update-interval=86400 // 全球加速
-RULE-SET,https://gitlab.com/lodepuly/asn-china/-/raw/main/ASN.China.list,DIRECT,update-interval=86400 // ASN China
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaASN/ChinaASN_Resolve.list,DIRECT,update-interval=86400 // ASN China
 FINAL,PROXY,dns-failed
 
 [Host]
