--- a/1.conf
+++ b/1.conf
@@ -4,4 +4,4 @@
 https://pcbe.perigee.se/api/v1/verify-purchases url script-request-header https://raw.githubusercontent.com/jivei/Surge/main/js/cycles.js
 [MITM]
 
-hostname = %APPEND% api.revenuecat.com,buy.itunes.apple.com
+hostname = api.revenuecat.com,buy.itunes.apple.com
