--- a/1.conf
+++ b/1.conf
@@ -2,8 +2,8 @@
 
 [rewrite_local]
 
-https://pcbe.perigee.se/api/v1/verify-purchases url script-request-header https://raw.githubusercontent.com/jivei/Surge/main/js/cycles.js
+https://pcbe.perigee.se/api/v1/verify-purchases url script-request-body https://raw.githubusercontent.com/jivei/Surge/main/js/cycles.js
 
 [MITM]
 
-hostname = api.revenuecat.com,buy.itunes.apple.com
+hostname = pcbe.perigee.se
