--- a/nssurge.conf
+++ b/nssurge.conf
@@ -435,7 +435,7 @@ RULE-SET,https://raw.githubusercontent.com/jivei/Surge/main/Emby.list,影视,upd
 RULE-SET,https://raw.githubusercontent.com/dler-io/Rules/main/Surge/Surge%203/Provider/Special.list,DIRECT,update-interval=86400 // 国内直连规则修正
 RULE-SET,https://raw.githubusercontent.com/jivei/Surge/main/Adguard.list,REJECT,update-interval=86400 // 自用分流去广告
 DOMAIN-SET,https://anti-ad.net/surge2.txt,REJECT // 分流广告拦截合集
-RULE-SET,https://limbopro.com/Adblock4limbo_surge.list,REJECT,update-interval=86400 // 分流网页广告拦截合集
+RULE-SET,https://raw.githubusercontent.com/jivei/Adblock/main/Adblock4limbo_surge.list,REJECT,update-interval=86400 // 分流网页广告拦截合集
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Privacy/Privacy.list,REJECT,update-interval=86400 // 隐私保护
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Privacy/Privacy_Domain.list,REJECT // 隐私保护
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Hijacking/Hijacking.list,REJECT,update-interval=86400 // 运营商劫持
