--- a/nssurge.conf
+++ b/nssurge.conf
@@ -68,14 +68,14 @@ allow-hotspot-access = false
 # 传统 DNS 服务器设置
 dns-server = 119.29.29.29,223.5.5.5
 # 加密 DNS 服务器设置
-encrypted-dns-server = https://dns.alidns.com/dns-query
+#encrypted-dns-server = https://dns.alidns.com/dns-query
 # encrypted-dns-server = https://dns.google/dns-query
 # encrypted-dns-server = https://cloudflare-dns.com/dns-query
 # encrypted-dns-server = https://dns.adguard.com/dns-query
 # encrypted-dns-server = https://public.dns.iij.jp/dns-query
 # 实验性 DNS ove QUIC 支持
 # encrypted-dns-server = quic://dns.adguard.com
-# encrypted-dns-server = h3://223.5.5.5/dns-query
+encrypted-dns-server = h3://223.5.5.5/dns-query
 # 使加密 DNS 请求通过代理策略执行
 encrypted-dns-follow-outbound-mode = false
 # 跳过证书验证
