--- a/nssurge.conf
+++ b/nssurge.conf
@@ -406,65 +406,49 @@ udp-priority = true
 # 自定义机场策略组名称2 = select, policy-path=你的机场订阅地址node list替换到这里, include-all-proxies=1, no-alert=0, hidden=0
 # 策略组（下面的节点信息需与外部节点对应，若删除了外部节点里的节点，那么在策略组里也要删除。）
 # 机场
-机场名称随意改  = select, policy-path=替换机场订阅地址, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
+我可以随便改  = select, policy-path=替换机场订阅地址, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
 # 分流策略
-# NewBing
-必应 = select, DIRECT, 香港节点,台湾节点,新国节点,美国节点,日本节点, include-all-proxies=1
-# NewBing
-油管 = select, 香港节点,台湾节点,新国节点,美国节点,日本节点, include-all-proxies=1
+# 油管
+YouTube = select, 香港节点,台湾节点,新国节点,美国节点,日本节点, include-all-proxies=1
 # 代理
 PROXY = select, 香港节点,台湾节点,新国节点,美国节点,日本节点, no-alert=0, hidden=0, include-all-proxies=1
 # Tiktok
-抖音 = select, 香港节点,台湾节点,新国节点,美国节点,日本节点, no-alert=0, hidden=0, include-all-proxies=1
+TikTok = select, 香港节点,台湾节点,新国节点,美国节点,日本节点, no-alert=0, hidden=0, include-all-proxies=1
+# Netflix
+Netflix = select, 香港节点,台湾节点,新国节点,美国节点,日本节点, no-alert=0, hidden=0, include-all-proxies=1
+# Disney
+Disney = select, 香港节点,台湾节点,新国节点,美国节点,日本节点, no-alert=0, hidden=0, include-all-proxies=1
 # ChatGPT
 ChatGPT = select, 香港节点,台湾节点,新国节点,美国节点,日本节点, no-alert=0, hidden=0, include-all-proxies=1
 # 节点筛选
-香港节点 = select, include-all-proxies=1, include-other-group="机场名称随意改", policy-regex-filter=^(?=.*((?i)🇭🇰|香港|港|(\b(HK|Hong)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$
-台湾节点 = select, include-all-proxies=1, include-other-group="机场名称随意改", policy-regex-filter=^(?=.*((?i)🇹🇼|台湾|台|(\b(TW|Tai|Taiwan)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$, no-alert=0, hidden=0
-新国节点 = select, include-all-proxies=1, include-other-group="机场名称随意改", policy-regex-filter=^(?=.*((?i)🇸🇬|新加坡|狮|(\b(SG|Singapore)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$, no-alert=0, hidden=0
-美国节点 = select, include-all-proxies=1, include-other-group="机场名称随意改", policy-regex-filter=^(?=.*((?i)🇺🇸|美国|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|(\b(US|United States)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$, no-alert=0, hidden=0
-日本节点 = select, include-all-proxies=1, include-other-group="机场名称随意改", policy-regex-filter=^(?=.*((?i)🇯🇵|日本|川日|东京|大阪|泉日|埼玉|(\b(JP|Japan)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$, no-alert=0, hidden=0
+香港节点 = select, include-all-proxies=1, include-other-group="我可以随便改", policy-regex-filter=^(?=.*((?i)🇭🇰|香港|港|(\b(HK|Hong)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$
+台湾节点 = select, include-all-proxies=1, include-other-group="我可以随便改", policy-regex-filter=^(?=.*((?i)🇹🇼|台湾|台|(\b(TW|Tai|Taiwan)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$, no-alert=0, hidden=0
+新国节点 = select, include-all-proxies=1, include-other-group="我可以随便改", policy-regex-filter=^(?=.*((?i)🇸🇬|新加坡|狮|(\b(SG|Singapore)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$, no-alert=0, hidden=0
+美国节点 = select, include-all-proxies=1, include-other-group="我可以随便改", policy-regex-filter=^(?=.*((?i)🇺🇸|美国|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|(\b(US|United States)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$, no-alert=0, hidden=0
+日本节点 = select, include-all-proxies=1, include-other-group="我可以随便改", policy-regex-filter=^(?=.*((?i)🇯🇵|日本|川日|东京|大阪|泉日|埼玉|(\b(JP|Japan)\b)))(?!.*((?i)回国|校园|游戏|🎮|(\b(GAME)\b))).*$, no-alert=0, hidden=0
 
 [Rule]
-# SUBNET,SSID:WIfi名称,DIRECT 
-# 当外部资源更新时发出通知
-# AND,((DOMAIN,raw.githubusercontent.com), (USER-AGENT,Surge*)),PROXY,notification-text="外部资源已更新",notification-interval=86400
-RULE-SET,https://raw.githubusercontent.com/jivei/Surge/main/Adguard.list,REJECT,update-interval=86400 
+DOMAIN-SUFFIX,store.apple.com,DIRECT
+RULE-SET,https://raw.githubusercontent.com/jivei/Surge/main/Adguard.list,REJECT 
 DOMAIN-SET,https://anti-ad.net/surge2.txt,REJECT 
-RULE-SET,https://raw.githubusercontent.com/jivei/Adblock/main/Adblock4limbo_surge.list,REJECT,update-interval=86400 
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/WeChat/WeChat.list,DIRECT,update-interval=86400 
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/TikTok/TikTok.list,抖音,update-interval=86400 
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Bing/Bing.list,必应,update-interval=86400 
-RULE-SET,https://gitlab.com/lodepuly/vpn_tool/-/raw/master/Tool/Loon/Rule/ApplePushNotificationService.list,DIRECT,update-interval=86400 
-RULE-SET,https://gitlab.com/lodepuly/vpn_tool/-/raw/master/Tool/Loon/Rule/AppleID.list,DIRECT,update-interval=86400 
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/TestFlight/TestFlight.list,PROXY,update-interval=86400 
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Speedtest/Speedtest.list,PROXY,update-interval=86400 
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/OpenAI/OpenAI.list,ChatGPT,update-interval=86400 
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Telegram/Telegram.list,PROXY,update-interval=86400 
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/YouTube/YouTube.list,油管,update-interval=86400 
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list,DIRECT,update-interval=86400
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Epic/Epic.list,PROXY,update-interval=86400 
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Sony/Sony.list,PROXY,update-interval=86400 
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Steam/Steam.list,PROXY,update-interval=86400 
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Nintendo/Nintendo.list,PROXY,update-interval=86400 
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_Domain.list,PROXY,update-interval=86400 
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaASN/ChinaASN_Resolve.list,DIRECT,update-interval=86400
+RULE-SET,https://raw.githubusercontent.com/jivei/Adblock/main/Adblock4limbo_surge.list,REJECT 
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/WeChat/WeChat.list,DIRECT 
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/TikTok/TikTok.list,TikTok  
+RULE-SET,https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Surge/Netflix/Netflix.list,Netflix
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Disney/Disney.list,Disney
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Speedtest/Speedtest.list,PROXY 
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/OpenAI/OpenAI.list,ChatGPT 
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Telegram/Telegram.list,PROXY 
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/YouTube/YouTube.list,YouTube 
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaASN/ChinaASN.list,DIRECT
 IP-CIDR,0.0.0.0/32,REJECT,no-resolve
-IP-CIDR,127.0.0.0/8,DIRECT
-# IP-CIDR,192.168.0.0/16,Ponte,no-resolve
+RULE-SET,LAN,DIRECT
 FINAL,PROXY,dns-failed
 
 
 [Host]
 # DNS 映射
-# IPv6
-ip6-localhost = ::1 // IPv6 Localhost
-ip6-loopback = ::1 // IPv6 Loopback
-ip6-localnet = fe00::0 // IPv6 Link-Local
-ip6-mcastprefix = ff00::0 // IPv6 Multicast
-ip6-allnodes = ff02::1 // IPv6 All Nodes
-ip6-allrouters = ff02::2 // IPv6 All Routers
-ip6-allhosts = ff02::3 // IPv6 All Hosts
 # Router Admin Panel
 *.id.ui.direct = server:syslib // Ubiquiti Unifi Network App
 unifi.local = server:syslib // Ubiquiti Unifi OS
