--- a/nssurge.conf
+++ b/nssurge.conf
@@ -39,7 +39,7 @@ ipv6 = false
 # 允许 IPv6 通过 Surge VIF。当希望 Surge 处理连接到 IPv6 地址的原始 TCP 连接时非常有用。可选项：true，false，auto，always
 ipv6-vif = auto
 # ⚠️ 隐藏状态栏上的VPN图标，启动该选项可能导致「Cannot allocate memory」系统错误，请谨慎使用，本配置在开启IP v6选项时失效
-# hide-vpn-icon = true
+hide-vpn-icon = true
 # Wi-Fi 访问
 # Surge 可以作为 HTTP/SOCKS5 代理服务器向 Wi-Fi 网络下的其他设备提供服务器
 allow-wifi-access = false
