--- a/nssurge.conf
+++ b/nssurge.conf
@@ -392,6 +392,11 @@ RULE-SET,LAN,direct
 FINAL,PROXY,dns-failed
 
 
+[URL Rewrite]
+# Google重定向
+^(http|https):\/\/(www.)?(g|google)\.cn https://www.google.com 302
+^https?://(www.)?(g|google).cn https://www.google.com 302
+
 [Host]
 # DNS 映射
 # Router Admin Panel
